# bcleaner

./: LICENSE  README.md
bsi_linux/: README.md  install.py  main.py  pyproject.toml  requirements.txt  uninstall.py  verif_main.py
bsi_linux/bcleaner/: apps.py  cookies.py  history.py  knwon_hosts.py  run.py  sudo.py  user_choice.py  utils.py
